# sway-screens

./: Cargo.toml  Readme.md
src/: main.rs  screens.rs  setup.rs  wlr.rs
src/wlr/: output_head.rs  output_manager.rs  output_mode.rs  registry.rs
