[package]
name = "sway-screens"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
fxhash = "0.2.1"
hyprland = "0.3.13"
interprocess = "1.2.1"
swayipc = "3.0.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
wayland-client = "0.31.2"
wayland-protocols = {version="0.31.2", features=["client", "unstable"]}
wayland-protocols-wlr = {version="0.2.0", features=["client"]}
